services/app-web/src/pages/StateDashboard/StateDashboard.module.scss
@use '../../styles/custom.scss' as custom;
@use '../../styles/uswdsImports.scss' as uswds;

.wrapper {
    display: flex;
    flex: 1 0 auto;
    width: 100%;
    max-width: 100%;
    background-color: custom.$mcr-foundation-white;
}

.container {
    width: 100%;
    max-width: custom.$mcr-container-max-width-fixed;
    padding: 0 2rem 0 2rem;
}

.alertContainer {
    padding-top: uswds.units(4);
    margin: auto;
    max-width: custom.$mcr-container-max-width-fixed;
}

.panel {
    padding: 0 uswds.units(2) uswds.units(2) uswds.units(2);
    width: 100%;

    & .panelHeader {
        display: flex;
        align-items: center;
        justify-content: space-between;
        font-weight: 700;
        padding-bottom: uswds.units(3);
    }
}

.stateDashboard .panelHeader {
    padding-bottom: 0;
}

.filterCount {
    padding-top: 0;
}

